# tap-airtable

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  dev.Dockerfile  meltano.yml  pyproject.toml  tap-airtable.yml
.github/workflows/: ci_workflow.yml  lint.yml  release.yml  test.yml
tap_airtable/: client.py  entities.py  streams.py  tap.py  types.py
tap_airtable/tests/: __init__.py  test_tap.py
tests/: conftest.py  test_integration.py  test_tap.py
